--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
+env
+.env
 
 # testing
 /coverage
@@ -28,6 +30,9 @@ yarn-error.log*
 .env*.local
 env
 /env
+.env
+.env.build
+.env.development
 
 
 # vercel
